# slides

./: .gitignore  Dockerfile  README.md  blog.md  example.ipynb  example.py  plan.md  pyproject.toml
src/slides/: __init__.py  api_types.py  base.py  image.py  object.py  operation.py  page.py  presentation.py  shape.py
src/slides/auth/: __init__.py  local.py  secret.py
src/slides/io/: __init__.py  gcs.py
src/slides/mcp/: __main__.py  auth_provider.py  models.py  server.py  tools.py  translate.py
tests/: test_boxdimension.py  test_compile.py  test_mcp_auth_provider.py  test_mcp_models.py  test_mcp_tools.py  test_mcp_translate.py  test_presentation.py  test_slide.py
